// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alias API /api/alias GET should retun all alias 1`] = `
Array [
  Object {
    "aliasId": 1,
    "createdAt": "2018-01-01T00:00:00.000Z",
    "createdBy": 1,
    "description": "test",
    "enabled": true,
    "name": "testone",
    "sceneId": 1,
    "updatedAt": "2018-01-02T00:00:00.000Z",
  },
  Object {
    "aliasId": 2,
    "createdAt": "2018-01-01T00:00:00.000Z",
    "createdBy": 1,
    "description": "test",
    "enabled": false,
    "name": "testtwo",
    "sceneId": 1,
    "updatedAt": "2018-01-02T00:00:00.000Z",
  },
]
`;

exports[`Alias API /api/alias POST should create a new alias 1`] = `
Object {
  "aliasId": 3,
  "createdBy": 1,
  "description": "test",
  "enabled": false,
  "name": "test_post",
  "sceneId": 1,
}
`;

exports[`Alias API /api/alias POST should create a new alias 2`] = `
Object {
  "aliasId": 3,
  "createdAt": Any<Date>,
  "createdBy": 1,
  "description": "test",
  "enabled": false,
  "name": "test_post",
  "sceneId": 1,
  "updatedAt": Any<Date>,
}
`;

exports[`Alias API /api/alias/:id GET should retun an alias 1`] = `
Object {
  "aliasId": 1,
  "createdAt": "2018-01-01T00:00:00.000Z",
  "createdBy": 1,
  "description": "test",
  "enabled": true,
  "name": "testone",
  "sceneId": 1,
  "updatedAt": "2018-01-02T00:00:00.000Z",
}
`;

exports[`Alias API /api/alias/:id PATCH should update an alias 1`] = `
Object {
  "aliasId": 1,
  "createdAt": Any<Date>,
  "createdBy": 1,
  "description": "test",
  "enabled": true,
  "name": "test_update",
  "sceneId": 2,
  "updatedAt": Any<Date>,
}
`;

exports[`Alias API /api/alias/:id/:enabled should disable an alias 1`] = `
Object {
  "aliasId": 1,
  "createdAt": Any<Date>,
  "createdBy": 1,
  "description": "test",
  "enabled": false,
  "name": "testone",
  "sceneId": 1,
  "updatedAt": Any<Date>,
}
`;

exports[`Alias API /api/alias/:id/:enabled should enable an alias 1`] = `
Object {
  "aliasId": 2,
  "createdAt": Any<Date>,
  "createdBy": 1,
  "description": "test",
  "enabled": true,
  "name": "testtwo",
  "sceneId": 1,
  "updatedAt": Any<Date>,
}
`;
